added button animation

--- a/css/style.css
+++ b/css/style.css
@@ -48,11 +48,13 @@ body {
 	top: 40%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	text-align: center;
 }
 
 .heading-primary {
 	color: white;
 	text-transform: uppercase;
+	margin-bottom: 60px;
 }
 
 .heading-primary-main {
@@ -100,6 +102,71 @@ body {
 		transform: translate(0);
 	}
 }
+
+.btn:link,
+.btn:visited {
+	text-transform: uppercase;
+	padding: 15px 40px;
+	display: inline-block;
+	border-radius: 100px;
+	transition: all .2s;
+	position: relative;
+}
+
+.btn:hover {
+	transform: translateY(-3px);
+	box-shadow: 0 10px 20px rgba(0,0,0,.2);
+}
+
+.btn:active {
+	transform: translateY(-1px);
+	box-shadow: 0 5px 10px rgba(0,0,0,.2);
+}
+
+.btn-white {
+	background-color: white;
+}
+
+.btn::after {
+	content: "";
+	display: inline-block;
+	height: 100%;
+	width: 100%;
+	border-radius: 100px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+	transition: all .3s;
+}
+.btn-white::after {
+	background-color: white;
+}
+
+.btn:hover::after {
+	transform: scaleX(1.4) scaleY(1.6);
+	opacity: 0;
+}
+
+.btn-animated {
+	animation: moveInButton .5s ease-out .50s;
+	animation-fill-mode: backwards;
+}
+
+@keyframes moveInButton {
+	0% {
+		opacity: 0;
+		transform: translateY(25px);
+	}
+	100% {
+		opacity: 1;
+		transform: translate(0);
+	}
+}
+
+
+
+
 
 
 
