--- a/css/style.css
+++ b/css/style.css
@@ -7,21 +7,28 @@ Dark green: #28b485
 
 */
 
-*, *:after, *:before {
+*, 
+*::after, 
+*::before {
 	margin: 0;
 	padding: 0;
 	text-decoration: none;
 	list-style: none;
-	box-sizing: border-box;
+	box-sizing: inherit;
+}
+
+html {
+	font-size: 62.5%;
 }
 
 body {
 	font-family: 'Lato', sans-sarif;
 	font-weight: 400;
-	font-size: 16px;
+	font-size: 1.6rem;
 	line-height: 1.7;
 	color: #777;
-	padding: 30px;
+	padding: 3rem;
+	box-sizing: border-box;
 }
 
 .header {
@@ -33,17 +40,17 @@ body {
 	position: relative;
 }
 
-.logo-box {
+.header__logo-box {
 	position: absolute;
-	top: 40px;
-	left: 40px;
+	top: 4rem;
+	left: 4rem;
 }
 
-.logo {
-	height: 35px;
+.header__logo {
+	height: 3.5rem;
 }
 
-.text-box {
+.header__text-box {
 	position: absolute;
 	top: 40%;
 	left: 50%;
@@ -54,34 +61,34 @@ body {
 .heading-primary {
 	color: white;
 	text-transform: uppercase;
-	margin-bottom: 60px;
+	margin-bottom: 6rem;
 }
 
-.heading-primary-main {
+.heading-primary--main {
 	display: block;
-	font-style: 60px;
+	font-style: 6rem;
 	font-weight: 400;
-	letter-spacing: 35px;
+	letter-spacing: 3.5rem;
 	animation-name: moveInLeft;
 	animation-duration: 1s;
 	animation-timing-function: ease-out;
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
 	display: block;
-	font-size: 16px;
+	font-size: 1.6rem;
 	font-weight: 600;
-	letter-spacing: 17.4px;
+	letter-spacing: 1.75rem;
 	animation: moveInRight 1s ease-out;
 }
 
 @keyframes moveInLeft {
 	0% {
 		opacity: 0;
-		transform: translateX(-100px);
+		transform: translateX(-10rem);
 	}
 	80% {
-		transform: translateX(10px);
+		transform: translateX(1rem);
 	}
 	100% {
 		opacity: 1;
@@ -92,10 +99,10 @@ body {
 @keyframes moveInRight {
 	0% {
 		opacity: 0;
-		transform: translateX(100px);
+		transform: translateX(10rem);
 	}
 	80% {
-		transform: translateX(-10px);
+		transform: translateX(-1rem);
 	}
 	100% {
 		opacity: 1;
@@ -106,24 +113,25 @@ body {
 .btn:link,
 .btn:visited {
 	text-transform: uppercase;
-	padding: 15px 40px;
+	padding: 1.5rem 4.0rem;
 	display: inline-block;
-	border-radius: 100px;
+	border-radius: 10rem;
 	transition: all .2s;
 	position: relative;
+	font-size: 1.6rem;
 }
 
 .btn:hover {
 	transform: translateY(-3px);
-	box-shadow: 0 10px 20px rgba(0,0,0,.2);
+	box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
 }
 
 .btn:active {
 	transform: translateY(-1px);
-	box-shadow: 0 5px 10px rgba(0,0,0,.2);
+	box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
 }
 
-.btn-white {
+.btn--white {
 	background-color: white;
 }
 
@@ -132,14 +140,14 @@ body {
 	display: inline-block;
 	height: 100%;
 	width: 100%;
-	border-radius: 100px;
+	border-radius: 10rem;
 	position: absolute;
 	top: 0;
 	left: 0;
 	z-index: -1;
 	transition: all .3s;
 }
-.btn-white::after {
+.btn--white::after {
 	background-color: white;
 }
 
@@ -148,7 +156,7 @@ body {
 	opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
 	animation: moveInButton .5s ease-out .50s;
 	animation-fill-mode: backwards;
 }
