--- a/project2/css/style.css
+++ b/project2/css/style.css
@@ -1,3 +1,15 @@
+/*
+
+
+
+*/
+/*
+$breakpoint argument choices:
+- phone
+- tab-port
+- tab-land
+- big-desktop
+*/
 @keyframes pulsate {
   0% {
     transform: scale(1);
@@ -19,6 +31,12 @@
 
 html {
   font-size: 62.5%; }
+  @media only screen and (max-width: 75em) {
+    html {
+      font-size: 56%; } }
+  @media only screen and (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
 
 :root {
   --color-primary: #eb2f64;
@@ -156,6 +174,11 @@ body {
   box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.3);
   background-color: #f4f2f2;
   min-height: 50rem; }
+  @media only screen and (max-width: 75em) {
+    .container {
+      margin: 0;
+      max-width: 100%;
+      width: 100%; } }
 
 .content {
   display: flex; }
@@ -177,6 +200,8 @@ body {
   padding: 3rem;
   flex: 0 0 60%;
   margin-right: 4.5rem; }
+  .description .paragraph:not(:last-of-type) {
+    margin-bottom: 2rem; }
   .description .list {
     margin: 3rem 0rem;
     list-style: none;
