--- a/project2/sass/abstracts/_mixins.scss
+++ b/project2/sass/abstracts/_mixins.scss
@@ -5,3 +5,33 @@
 		clear: both;
 	}
 }
+
+// MEDIA QUERY MANAGER
+/*
+
+
+
+*/
+/*
+$breakpoint argument choices:
+- phone
+- tab-port
+- tab-land
+- big-desktop
+*/
+// 1em = 16px since em's in media queiries are not affected by the 62.5% rest
+
+@mixin respond($breakpoint) {
+	@if $breakpoint == phone {
+		@media only screen and (max-width: 37.5em) { @content };
+	}
+	@if $breakpoint == tab-port {
+		@media only screen and (max-width: 56.25em) { @content };
+	}
+	@if $breakpoint == tab-land {
+		@media only screen and (max-width: 75em) { @content };
+	}
+	@if $breakpoint == big-desktop {
+		@media only screen and (min-width: 112.5em) { @content };
+	}
+}
