--- a/project2/sass/layout/_content.scss
+++ b/project2/sass/layout/_content.scss
@@ -8,6 +8,11 @@
     box-shadow: $shadow-dark;
     background-color: $color-grey-light-2;
     min-height: 50rem;
+    @include respond(tab-land) {
+        margin: 0;
+        max-width: 100%;
+        width: 100%;
+    }
 }
 
 .content {
