--- a/project2/sass/layout/_detail.scss
+++ b/project2/sass/layout/_detail.scss
@@ -14,7 +14,7 @@
     flex: 0 0 60%;
     margin-right: 4.5rem;
     & .paragraph:not(:last-of-type) {
-        // margin-bottom: 2rem;
+        margin-bottom: 2rem;
     }
     & .list {
         margin: 3rem 0rem;
