--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -5,3 +5,39 @@
 		clear: both;
 	}
 }
+
+// MEDIA QUERY MANAGER
+/*
+0 - 600px:      Phone
+600 - 900px:    Tablet portrait
+900 - 1200px:   Tablet landscape
+1200 - 1800px:  Desktops
+1800px - +:     Large Screens
+*/ 
+// @mixin responde-phone {
+// 	@media (max-width: 600px) { @content };
+// }
+
+/*
+$breakpoint argument choices:
+- phone
+- tab-port
+- tab-land
+- big-desktop
+*/
+// 1em = 16px since em's in media queries are not affected by the 62.5% rest
+
+@mixin respond($breakpoint) {
+	@if $breakpoint == phone {
+		@media (max-width: 37.5em) { @content };
+	}
+	@if $breakpoint == tab-port {
+		@media (max-width: 56.25em) { @content };
+	}
+	@if $breakpoint == tab-land {
+		@media (max-width: 75em) { @content };
+	}
+	@if $breakpoint == big-desktop {
+		@media (min-width: 112.5em) { @content };
+	}
+}
