--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,9 +9,25 @@
 }
 
 html {
-	font-size: 62.5%;
+	font-size: 62.5%; // 1rem = 10px
+	// @include responde-phone {
+	// 	font-size: 50%;
+	// }
+	@include respond(tab-land) {
+		font-size: 56.25%; // 1 rem = 9px
+	}
+	@include respond(tab-port) {
+		font-size: 50%; // 1 rem = 8px
+	}
+	@include respond(big-desktop) {
+		font-size: 75%; // 1 rem = 12px
+	}
 }
 
 body {
 	box-sizing: border-box;
+	padding: 3rem;
+	@include respond(tab-port) {
+		padding: 0;
+	}
 }
