--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,7 +1,10 @@
 .section-about {
 	background-color: $color-grey-light-1;
 	padding: 25rem 0;
-	margin-top: -20vh;
+	margin-top: -10vh;
+	@include respond(tab-port) {
+		padding: 20rem 0rem;
+	}
 }
 
 .section-features {
@@ -13,17 +16,26 @@
 	& > * {
 		transform: skewY(7deg);
 	}
+	@include respond(tab-port) {
+		padding: 10rem 0rem;
+	}
 }
 
 .section-tours {
 	background-color: $color-grey-light-1;
-	padding: 25rem 0;
+	padding: 25rem 0 15rem 0;
 	margin-top: -10rem;
+	@include respond(tab-port) {
+		padding: 20rem 0rem 10rem 0;
+	}
 }
 
 .section-stories {
 	padding: 15rem 0;
 	position: relative;
+	@include respond(tab-port) {
+		padding: 10rem 0rem;
+	}
 }
 
 .section-book {
