--- a/project1/sass/layout/_grid.scss
+++ b/project1/sass/layout/_grid.scss
@@ -36,7 +36,7 @@
 		width: calc((100% - 3*#{$gutter-horizontal})/4)	
 	}
 	.col-2-of-3 {
-		width: calc(2*(100% - 2*#{$gutter-horizontal})/3 + #{$gutter-horizontal})
+		width: calc(2*(100% - 2*#{$gutter-horizontal})/3 + #{$gutter-horizontal});
 	}
 	.col-2-of-4 {
 		width: calc((100% - #{$gutter-horizontal})/2);
