--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -9,6 +9,10 @@
     opacity: 0;
     visibility: hidden;
     transition: all 0.3s;
+    @supports(backdrop-filter: blur(10px)) {
+        backdrop-filter: blur(10px);
+        background-color: rgba($color-black, 0.5);
+    }
     &:target {
         opacity: 1;
         visibility: visible;
