--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -9,11 +9,18 @@
     font-size: $default-font-size;
     @include clearfix;
     transform: skewX(-12deg);
+    @include respond(tab-port) {
+        width: 100%;
+        padding: 4rem;
+        padding-left: 7rem;
+    }
+    @include respond(phone) {
+        transform: skewX(0);
+    }
     &__shape {
         width: 15rem;
         height: 15rem;
         float: left;
-        background-color: orangered;
         border-radius: 50%;
         -webkit-shape-outside: circle(50% at 50% 50%);
         shape-outside: circle(50% at 50% 50%);
@@ -21,6 +28,9 @@
         clip-path: circle(50% at 50% 50%);
         transform: translateX(-3rem) skewX(12deg);
         position: relative;
+        @include respond(phone) {
+            transform: translateX(-3rem) skewX(0);
+        }
     }
     &__img {
         height: 100%;
@@ -29,6 +39,9 @@
     }
     &__text {
         transform: skewX(12deg);
+        @include respond(phone) {
+            transform: skewX(0);
+        }
     }
     &__caption {
         position: absolute;
