--- a/project1/sass/layout/_header.scss
+++ b/project1/sass/layout/_header.scss
@@ -6,7 +6,8 @@
 	clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 	position: relative;
 
-	@media (min-resolution: 192dpi) and (min-width: 600px) {
+	@media (min-resolution: 192dpi) and (min-width: 600px),
+		   (-webkit-min-device-pixel-ratio: 2) and (min-width: 600px) {
 		background-image: linear-gradient(to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)) , url('../images/hero.jpg');
 	}
 
