--- a/project2/css/style.css
+++ b/project2/css/style.css
@@ -38,16 +38,117 @@ body {
   min-height: 100vh;
   color: var(--color-grey-dark-2); }
 
-.gallery::after {
-  content: "";
-  display: table;
-  clear: both; }
-.gallery__item {
+.gallery {
+  display: flex; }
+  .gallery__photo {
+    width: 100%;
+    display: block; }
+
+.overview {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #f4f2f2; }
+  .overview__heading {
+    font-size: 2.25rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 1.5rem 3rem; }
+  .overview__starts {
+    margin-right: auto;
+    display: flex; }
+  .overview__icon-star, .overview__icon-location {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: #eb2f64; }
+  .overview__location {
+    font-size: 1.2rem;
+    display: flex;
+    vertical-align: center; }
+  .overview__icon-location {
+    margin-right: 0.5rem; }
+  .overview__rating {
+    background-color: #eb2f64;
+    color: white;
+    padding: 0 2.25rem;
+    margin-left: 3rem;
+    align-self: stretch;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+  .overview__rating-average {
+    font-size: 2.25rem;
+    font-weight: 300;
+    margin-bottom: -3px; }
+  .overview__rating-count {
+    font-size: 0.8rem;
+    text-transform: uppercase; }
+
+.btn-inline {
+  border: none;
+  color: #eb2f64;
+  font-size: inherit;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
   display: inline-block;
-  width: 33.33333%;
-  float: left; }
-.gallery__photo {
-  width: 100%; }
+  background-color: transparent;
+  cursor: pointer;
+  transition: all 0.2s; }
+  .btn-inline span {
+    margin-left: 3px;
+    transition: margin-left 0.2s; }
+  .btn-inline:hover {
+    color: var(--color-grey-dark-1); }
+    .btn-inline:hover span {
+      margin-left: 8px; }
+  .btn-inline:focus {
+    outline: none;
+    animation: pulsate 1s infinite backwards; }
+
+.review {
+  background-color: white;
+  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.08);
+  padding: 3rem;
+  margin-bottom: 3.5rem;
+  position: relative;
+  overflow: hidden; }
+  .review__text {
+    margin-bottom: 2rem;
+    z-index: 10;
+    position: relative; }
+  .review__user {
+    display: flex;
+    align-items: center; }
+  .review__photo {
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1.5rem; }
+  .review__user-box {
+    margin-right: auto; }
+  .review__user-name {
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: 4px; }
+  .review__user-date {
+    font-size: 1rem;
+    color: var(--color-grey-dark-3); }
+  .review__rating {
+    color: #eb2f64;
+    font-size: 2.2rem;
+    font-weight: 300; }
+  .review::before {
+    content: "\201C";
+    position: absolute;
+    top: -2.75rem;
+    left: -1rem;
+    line-height: 1;
+    font-size: 20rem;
+    color: #f4f2f2;
+    font-family: sans-serif;
+    z-index: 1; }
 
 .container {
   max-width: 120rem;
@@ -62,6 +163,65 @@ body {
 .hotel-view {
   background-color: white;
   flex: 1; }
+
+.detail {
+  display: flex;
+  padding: 4.5rem;
+  background-color: #faf9f9;
+  border-bottom: 1px solid #f4f2f2;
+  font-size: 1.4rem; }
+
+.description {
+  background-color: white;
+  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.08);
+  padding: 3rem;
+  flex: 0 0 60%;
+  margin-right: 4.5rem; }
+  .description .list {
+    margin: 3rem 0rem;
+    list-style: none;
+    padding: 3rem 0rem;
+    border-top: 1px solid #f4f2f2;
+    border-bottom: 1px solid #f4f2f2;
+    display: flex;
+    flex-wrap: wrap; }
+    .description .list__item {
+      flex: 0 0 50%;
+      margin-bottom: 0.7rem; }
+      .description .list__item::before {
+        content: "";
+        display: inline-block;
+        width: 1rem;
+        height: 1rem;
+        margin: 7px;
+        background-image: url("../images/chevron-thin-right.svg");
+        background-size: cover;
+        background-color: #eb2f64;
+        -webkit-mask-image: url("../images/chevron-thin-right.svg");
+        -webkit-mask-size: cover;
+        mask-size: cover;
+        vertical-align: middle; }
+  .description .recommend {
+    font-size: 1.3rem;
+    color: var(--color-grey-dark-3);
+    display: flex;
+    align-items: center; }
+    .description .recommend__photo {
+      height: 4rem;
+      width: 4rem;
+      border-radius: 50%;
+      border: 3px solid white;
+      box-sizing: content-box; }
+      .description .recommend__photo:not(:last-child) {
+        margin-right: -1.5rem; }
+    .description .recommend__count {
+      margin-right: auto; }
+
+.user-reviews {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
 
 .row {
   max-width: 114rem;
@@ -197,7 +357,7 @@ body {
     width: 3px;
     background-color: #eb2f64;
     transform: scaleY(0);
-    transition: transform 0.2s, width 0.3s cubic-bezier(1, 0, 0, 1) 0.2s; }
+    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s; }
   .side-nav__item:hover::before, .side-nav__item--active::before {
     transform: scaleY(1);
     width: 100%; }
