--- a/project2/sass/layout/_detail.scss
+++ b/project2/sass/layout/_detail.scss
@@ -1,64 +1,65 @@
 .detail {
-    // display: flex;
-    // padding: 4.5rem;
-    // background-color: $color-grey-light-1;
-    // border-bottom: $line;
-    // font-size: 1.4rem;
+    display: flex;
+    padding: 4.5rem;
+    background-color: $color-grey-light-1;
+    border-bottom: $line;
+    font-size: 1.4rem;
     // height: 100%;
 }
 
 .description {
-    // background-color: white;
-    // box-shadow: $shadow-light;
-    // padding: 3rem;
-    // flex: 0 0 60%;
-    // margin-right: 4.5rem;
+    background-color: white;
+    box-shadow: $shadow-light;
+    padding: 3rem;
+    flex: 0 0 60%;
+    margin-right: 4.5rem;
     & .paragraph:not(:last-of-type) {
         // margin-bottom: 2rem;
     }
     & .list {
-        // margin: 3rem 0rem;
-        // list-style: none;
-        // padding: 3rem 0rem;
-        // border-top: $line;
-        // border-bottom: $line;
-        // display: flex;
-        // flex-wrap: wrap;
+        margin: 3rem 0rem;
+        list-style: none;
+        padding: 3rem 0rem;
+        border-top: $line;
+        border-bottom: $line;
+        display: flex;
+        flex-wrap: wrap;
         // columns: 2;
         &__item {
-            // flex: 0 0 50%;
-            // margin-bottom: 0.7rem;
+            flex: 0 0 50%;
+            margin-bottom: 0.7rem;
             &::before {
-                // content: "";
-                // display: inline-block;
-                // width: 1rem;
-                // height: 1rem;
-                // margin: 7px;
+                content: "";
+                display: inline-block;
+                width: 1rem;
+                height: 1rem;
+                margin: 7px;
                 // // Older Browsers
-                // background-image: url('../images/chevron-thin-right.svg');
-                // background-size: cover;
-                // background-color: $color-primary;
-                // -webkit-mask-image: url('../images/chevron-thin-right.svg');
-                // -webkit-mask-size: cover;
-                // mask-size: cover;
-                // vertical-align: middle;
+                background-image: url('../images/chevron-thin-right.svg');
+                background-size: cover;
+                background-color: $color-primary;
+                -webkit-mask-image: url('../images/chevron-thin-right.svg');
+                -webkit-mask-size: cover;
+                mask-size: cover;
+                vertical-align: middle;
             }
         }
     }
     & .recommend {
-        // font-size: 1.3rem;
-        // color: var(--color-grey-dark-3);
+        font-size: 1.3rem;
+        color: var(--color-grey-dark-3);
         // position: relative;
+        display: flex;
         // @include clearfix;
-        // display: flex;
+        align-items: center;
         &__photo {
-            // height: 4rem;
-            // width: 4rem;
-            // border-radius: 50%;
-            // border: 3px solid white;
-            // box-sizing: content-box;
+            height: 4rem;
+            width: 4rem;
+            border-radius: 50%;
+            border: 3px solid white;
+            box-sizing: content-box;
             &:not(:last-child) {
-                // margin-right: -1.5rem;
+                margin-right: -1.5rem;
             }
         }
         
@@ -66,6 +67,7 @@
             // display: inline-block;
             // position: absolute;
             // bottom: 1.6rem;
+            margin-right: auto;
         }
         
         &__friends {
@@ -76,5 +78,9 @@
 }
 
 .user-reviews {
-    // flex: 1;
+    flex: 1;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
