--- a/project2/sass/layout/_navigation.scss
+++ b/project2/sass/layout/_navigation.scss
@@ -31,7 +31,8 @@
         width: 3px;
         background-color: $color-primary;
         transform: scaleY(0);
-        transition: transform 0.2s, width 0.3s cubic-bezier(1, 0, 0, 1) 0.2s;
+        transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s,
+        background-color 0.1s;
     }
     &__item:hover::before,
     &__item--active::before {
