--- a/project2/sass/layout/_header.scss
+++ b/project2/sass/layout/_header.scss
@@ -4,27 +4,27 @@
     background-color: white;
     border-bottom: $line;
     & > * {
-        display: inline-block;
+        // display: inline-block;
     }
-    text-align: center;
-    // display: flex;
-    // justify-content: space-between;
-    // align-items: center;
+    // text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     & .logo {
         height: 3.25rem;
-        float: left;
+        // float: left;
         margin-left: 3rem;
-        position: relative;
-        bottom: -2rem;
+        // position: relative;
+        // bottom: -2rem;
     }
     & .search {
-        // flex: 0 0 40%;
-        width: 40%;
-        // display: flex;
-        // align-items: center;
-        // justify-content: center;
-        position: relative;
-        bottom: -2rem;
+        flex: 0 0 40%;
+        // width: 40%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        // position: relative;
+        // bottom: -2rem;
         &__input {
             font-family: inherit;
             font-size: inherit;
@@ -41,7 +41,7 @@
                 width: 100%;
                 background-color: $color-grey-light-3;
                 & + button {
-                        transform: translate(60%, -45%);
+                        // transform: translate(60%, -45%);
                         background-color: $color-grey-light-3;
                 }
             }
@@ -53,17 +53,17 @@
         &__button {
             border: none;
             background-color: $color-grey-light-2;
-            margin: auto 0;
-            position: absolute;
-            top: 50%;
-            right: 1rem;
-            transform: translate(0%, -50%);
-            transition: transform 0.3s;
+            // margin: auto 0;
+            // position: absolute;
+            // top: 50%;
+            // right: 1rem;
+            // transform: translate(0%, -50%);
+            // transition: transform 0.3s;
             &:focus {
                 outline: none;
             }
             &:active {
-                transform: translate(0%, -45%);
+                transform: translateY(2px);
             }
         }
 
@@ -74,15 +74,18 @@
         }
     }
     & .user-nav {
-        float: right;
-        text-align: left;
-        height: 100%;
-        // align-self: stretch;
-        // display: flex;
+        // float: right;
+        // text-align: left;
+        // height: 100%;
+        display: flex;
+        align-items: center;
+        align-self: stretch;
         & > * {
             padding: 0 2rem;
             cursor: pointer;
             height: 100%;
+            display: flex;
+            align-items: center;
             // justify-content: 100%;
         }
 
@@ -91,12 +94,10 @@
         }
 
         &__icon-box {
-            display: inline-block;
-            line-height: 6.5;
-            // display: flex;
-            // align-items: center;
+            // display: inline-block;
+            // line-height: 6.5;
             position: relative;
-            vertical-align: top;
+            // vertical-align: top;
         }
 
         &__icon {
@@ -117,14 +118,14 @@
             right: 1.2rem;
             line-height: 2;
             text-align: center;
-            // display: flex;
-            // justify-content: center;
-            // align-items: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         &__user {
-            display: inline-block;
-            line-height: 7.4;
+            // display: inline-block;
+            // line-height: 7.4;
         }
 
         &__user-photo {
